restyle header component with correct spacing, other than uncertainty on tablet size

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,10 +17,12 @@
         height: 11.625rem;
         justify-content: space-between;
         margin: 0 -2rem;
+        padding: 0 2rem;
     }
 
     @include desktop {
         margin: 0 -8.125rem;
+        padding: 0 8.125rem;
     }
 
     &__img {
@@ -28,13 +30,13 @@
             padding: 1.5rem 0 1.75rem;
 
             @include tablet {
-                margin: 2rem;
+                margin: 2rem 0;
                 padding: 0;
                 width: 8.125rem;
             }
 
             @include desktop {
-                margin: 2rem 8.125rem;
+                margin: 2rem 0;
             }
     }
 
@@ -44,21 +46,22 @@
         width: 100%;
 
         @include tablet {
-            padding: 1.75rem 2rem;
+            padding: 1.75rem 0;
             width: fit-content;
             gap: .5rem;
         }
 
         @include desktop {
-            padding: 1.75rem 8.125rem;
+            padding: 1.75rem 0;
         }
     }
 
     &__warehouse-button {
         height: 2.25rem;
-        padding: 0 3rem;
+        // padding: 0 3rem;
+        width: 44%;
         background-color: $background-color-dark;
-        color: $background-color-light;
+        color: $secondary-color-light;
         border: none;
         border-radius: 1.125rem;
         font-size: .625rem;
@@ -66,9 +69,10 @@
         &:hover {
             background-color: $primary-color-dark;
             color: $primary-color-light;
+            cursor: pointer;
         }
         @include tablet {
-            height: 2.25rem;
+            height: 2.375rem;
             width: 6.75rem;
             padding: 0;
             border-radius: 1.125rem;
@@ -77,10 +81,10 @@
 
     &__inventory-button {
         height: 2.25rem;
-        padding: 0 2.25rem;
+        // padding: 0 2.25rem;
+        width: 44%;
         background-color: $background-color-dark;
-        color: $background-color-light;
-        color: $background-color-light;
+        color: $secondary-color-light;
         border: none;
         border-radius: 1.125rem;
         font-size: .625rem;
@@ -88,10 +92,11 @@
         &:hover {
             background-color: $primary-color-dark;
             color: $primary-color-light;
+            cursor: pointer;
         }
 
         @include tablet {
-            height: 2.25rem;
+            height: 2.375rem;
             width: 5.625rem;
             padding: 0;
         }
